# cudacase

./: .gitignore  CMakeLists.txt  README.md  main.cu  run.sh
csrc/cuda/gemm/: globalmem_2dmm.cu  sharedmem_2dmm.cu
csrc/device/gemm/: globalmem_2dmm.cu  native_2dmm.cu  sharedmem_2dmm.cu
csrc/host/: gemm.cc
include/cuda/gemm/: globalmem_2dmm.cuh  sharedmem_2dmm.cuh
include/device/gemm/: globalmem_2dmm.cuh  native_2dmm.cuh  sharedmem_2dmm.cuh
include/host/: gemm.h
